@@ -10,6 +10,7 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,6 +19,7 @@ public class RoomService {
     private final Lobby lobby;
     private final SimpMessagingTemplate simpMessagingTemplate;
     private final RoomMapper roomMapper;
+    private  final BotService botService;
 
     private void broadcastRooms () {
         simpMessagingTemplate.convertAndSend(
@@ -53,8 +55,8 @@ public class RoomService {
 
     public RoomDto createPublicRoom (CreatePublicRoomDto createPublicRoomDto) {
 
-        String playerId = createPublicRoomDto.getPlayerId();
-        String name = createPublicRoomDto.getName();
+        String playerId = createPublicRoomDto.playerId();
+        String name = createPublicRoomDto.name();
 
         Player roomOwner = lobby.getPlayer(playerId);
         if (roomOwner == null) throw new RuntimeException("Player not found");
@@ -67,9 +69,9 @@ public class RoomService {
 
     public RoomDto createPrivateRoom (CreatePrivateRoomDto createPrivateRoomDto) {
 
-        String name = createPrivateRoomDto.getName();
-        String password = createPrivateRoomDto.getPassword();
-        String  playerId = createPrivateRoomDto.getPlayerId();
+        String name = createPrivateRoomDto.name();
+        String password = createPrivateRoomDto.password();
+        String  playerId = createPrivateRoomDto.playerId();
 
         Player roomOwner = lobby.getPlayer(playerId);
         if (roomOwner == null) throw new IllegalStateException("Player not found");
@@ -80,8 +82,8 @@ public class RoomService {
 
 
     public RoomDto joinPublicRoom (JoinRoomDto joinRoomDto){
-        Player player = lobby.getPlayer(joinRoomDto.getPlayerId());
-        Room room = lobby.getRoom(joinRoomDto.getRoomId());
+        Player player = lobby.getPlayer(joinRoomDto.playerId());
+        Room room = lobby.getRoom(joinRoomDto.roomId());
 
         if (player == null) {
             throw new IllegalStateException("Player does not exist");
@@ -94,36 +96,77 @@ public class RoomService {
         room.addPlayer(player);
 
         broadcastRooms();
-        broadcastRoom(joinRoomDto.getRoomId());
+        broadcastRoom(joinRoomDto.roomId());
 
         return roomMapper.roomToRoomDto(room);
     }
 
+//    bot section
+    public RoomDto addBotToRoom (BotRequestDto addBotRequest) {
+        Room room = lobby.getRoom(addBotRequest.roomId());
+        if (room == null) throw new RuntimeException("Room not found");
+
+        if (!room.getRoomOwner().getId().equals(addBotRequest.ownerId())) {
+            throw new RuntimeException("Only owner of room can add bots");
+        }
+
+        if (room.isFull()) throw new RuntimeException("Room is already full");
+
+        Player botPlayer = botService.generateBot();
+        lobby.addPlayer(botPlayer);
+        room.addPlayer(botPlayer);
+
+        broadcastRooms();
+        broadcastRoom(addBotRequest.roomId());
+
+        return roomMapper.roomToRoomDto(room);
+    }
+
+    public RoomDto removeBot (BotRequestDto botRequestDto) {
+        Room room = lobby.getRoom(botRequestDto.roomId());
+        if (room == null) {
+            throw new RuntimeException("Room already does not exist");
+        }
+
+        room.getPlayers().stream()
+                .filter(Player::isBot)
+                .findFirst()
+                .ifPresent(bot -> {
+                    room.removePlayer(bot);
+                    lobby.removePlayer(bot.getId());
+                });
+
+        broadcastRooms();
+        broadcastRoom(botRequestDto.roomId());
+
+        return roomMapper.roomToRoomDto(room);
+    }
+//
 
     public void leaveRoom(LeaveRoomDto leaveRoomDto) {
 
-        Player player = lobby.getPlayer(leaveRoomDto.getPlayerId());
-        Room room = lobby.getRoom(leaveRoomDto.getRoomId());
+        Player player = lobby.getPlayer(leaveRoomDto.playerId());
+        Room room = lobby.getRoom(leaveRoomDto.roomId());
 
         if (player == null || room == null)
             throw new RuntimeException("Player or Room not found");
 
         room.removePlayer(player);
 
-        if (room.getRoomOwner().getId().equals(leaveRoomDto.getPlayerId()) && !room.getPlayers().isEmpty()) {
-            room.setRoomOwner(room.getPlayers().get(0));
+        if (room.getRoomOwner().getId().equals(leaveRoomDto.playerId()) && !room.getPlayers().isEmpty()) {
+            room.setRoomOwner(room.getPlayers().getFirst());
         }
 
         if (room.getPlayers().isEmpty()) {
-            lobby.removeRoom(leaveRoomDto.getRoomId());
+            lobby.removeRoom(leaveRoomDto.roomId());
         }
 
         broadcastRooms();
-        broadcastRoom(leaveRoomDto.getRoomId());
+        broadcastRoom(leaveRoomDto.roomId());
     }
 
     public void leaveRoomAndDelete(LeaveRoomDto leaveRoomDto) {
-        Room room = lobby.getRoom(leaveRoomDto.getRoomId());
+        Room room = lobby.getRoom(leaveRoomDto.roomId());
 
         if (room == null) {
             return;
@@ -133,4 +176,5 @@ public class RoomService {
 
         simpMessagingTemplate.convertAndSend("/topic/rooms", lobby.getRooms());
     }
+
 }
